--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "The goal is to remove the averaged trend (decreasing) of the NRCS with (increasing) incidence angle observed for acquisitions over ocean. \n",
     "\n",
-    "The detrend maximizes the contrasts in the image due to geophysical phenomena and improves the visualization experience of ocean scenes. sigma0_detrend is also termed **image roughness** or **nice display**."
+    "The detrend maximizes the contrasts in the image due to geophysical phenomena and improves the visualization experience of ocean scenes. \n",
+    "\n",
+    "**Sigma0_detrend** is also termed **image roughness** or **nice display**."
    ]
   },
   {
@@ -31,11 +33,11 @@
    "outputs": [],
    "source": [
     "# use holoviews for plots\n",
-    "\n",
+    "import bokeh.io\n",
+    "bokeh.io.output_notebook()\n",
     "import holoviews as hv\n",
     "hv.extension('bokeh')\n",
-    "from holoviews.operation.datashader import datashade,rasterize\n",
-    "import datashader as dh"
+    "from holoviews.operation.datashader import datashade,rasterize"
    ]
   },
   {
@@ -93,7 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rasterize(hv.Image(sar_ds.sigma0.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"original sigma0\")) + rasterize(hv.Image(sar_ds.sigma0_detrend.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"detrended sigma0\"))"
+    "rasterize(hv.Image(sar_ds.sigma0.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"original sigma0\")) \\\n",
+    "    + rasterize(hv.Image(sar_ds.sigma0_detrend.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"detrended sigma0\"))"
    ]
   },
   {
@@ -143,15 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rasterize(hv.Image(sar_ds['sigma0_detrend'].sel(pol='VV'))).opts(cmap='gray',frame_width=400, frame_height=400) * hv.VectorField( xr.ufuncs.deg2rad(streaks_dir.sel(pol='VV'))).opts(arrow_heads=False) "
+    "rasterize(hv.Image(sar_ds['sigma0_detrend'].sel(pol='VV'))).opts(cmap='gray',frame_width=400, frame_height=400) \\\n",
+    "    * hv.VectorField( xr.ufuncs.deg2rad(streaks_dir.sel(pol='VV'))).opts(arrow_heads=False) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
