--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -23,7 +23,8 @@
    "source": [
     "import xsar\n",
     "import xsarsea\n",
-    "import os"
+    "import os\n",
+    "import datetime"
    ]
   },
   {
@@ -86,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence)"
+    "sar_ds['sigma0'] = sar_ds.sigma0.persist()\n",
+    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence).persist()"
    ]
   },
   {
@@ -135,9 +137,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streaks_dir = xsarsea.streaks.streaks_direction(\n",
-    "    sar_ds['sigma0_detrend'])\n",
-    "streaks_dir"
+    "t1 = datetime.datetime.now()\n",
+    "streaks_dir = xsarsea.streaks.streaks_direction(sar_ds['sigma0_detrend'])\n",
+    "print('streaks computed in %s' % str(datetime.datetime.now() - t1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "streaks_dir.chunks"
    ]
   },
   {
@@ -149,6 +160,13 @@
     "rasterize(hv.Image(sar_ds['sigma0_detrend'].sel(pol='VV'))).opts(cmap='gray',frame_width=400, frame_height=400) \\\n",
     "    * hv.VectorField( xr.ufuncs.deg2rad(streaks_dir.sel(pol='VV'))).opts(arrow_heads=False) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
