--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -56,6 +56,7 @@
    "source": [
     "# get test file. You can replace with an path to other SAFE\n",
     "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE')\n",
+    "#filename = xsar.get_test_file('S1B_IW_GRDH_1SDV_20181013T062322_20181013T062347_013130_018428_Z010.SAFE')\n",
     "filename"
    ]
   },
@@ -100,79 +101,25 @@
     "rasterize(hv.Image(sar_ds.sigma0.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"original sigma0\")) \\\n",
     "    + rasterize(hv.Image(sar_ds.sigma0_detrend.sel(pol='VV')).opts(cmap='gray',colorbar=True,tools=['hover'],title=\"detrended sigma0\"))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Wind streaks direction\n",
-    "\n",
-    "(⚠️work in progress⚠️ )\n",
-    "\n",
-    "More science work is needed to have better results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xsarsea.streaks\n",
-    "import xarray as xr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Wind streaks detection is done with [xsarsea.streaks.streaks_direction](../basic_api.rst#xsarsea.streaks.streaks_direction)\n",
-    "\n",
-    "The resulting datarray doesn't have the same shape as `sigma0_detrend`, so it can't be included in the original dataset (or an interpolation is needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t1 = datetime.datetime.now()\n",
-    "streaks_dir = xsarsea.streaks.streaks_direction(sar_ds['sigma0_detrend'])\n",
-    "print('streaks computed in %s' % str(datetime.datetime.now() - t1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "streaks_dir.chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rasterize(hv.Image(sar_ds['sigma0_detrend'].sel(pol='VV'))).opts(cmap='gray',frame_width=400, frame_height=400) \\\n",
-    "    * hv.VectorField( xr.ufuncs.deg2rad(streaks_dir.sel(pol='VV'))).opts(arrow_heads=False) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
