typo fix in streaks.ipynb

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "## Digging into MultiGradients\n",
     "\n",
-    "[xsarsea.gradients.MultiGradientsWiewer](../basic_api.rst#xsarsea.gradients.MultiGradientsWiewer) can be used to dig interactively with a `MultiGradient` instance.\n",
+    "[xsarsea.gradients.MultiGradientsViewer](../basic_api.rst#xsarsea.gradients.MultiGradientsViewer) can be used to dig interactively with a `MultiGradient` instance.\n",
     "\n",
     "Note that this require a live notebook, and can't be fully used from the html example page.\n",
     "\n",
