streaks code reworked

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ec839c8-2e2e-4fb6-8290-a475c46dd40b",
+   "id": "4568ec08",
    "metadata": {},
    "source": [
     "# Streaks analysis\n",
+    "\n",
     "\n",
     "Streaks analysis is done by [Koch (20004)](https://www.climate-service-center.de/imperia/md/content/gkss/institut_fuer_kuestenforschung/ksd/paper/kochw_ieee_2004.pdf) algorithm implementation.\n"
    ]
@@ -13,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c69cc5-7b69-48d1-93fd-8376d0901696",
+   "id": "bb5a0730",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,24 +22,37 @@
     "import xsar\n",
     "import xsarsea\n",
     "import xsarsea.gradients\n",
-    "import bokeh.io\n",
-    "bokeh.io.output_notebook()\n",
-    "import holoviews as hv\n",
-    "hv.extension('bokeh')\n",
+    "\n",
     "import xarray as xr\n",
     "import numpy as np\n",
-    "import scipy"
+    "import scipy\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "import logging\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger('xsar.utils').setLevel(logging.DEBUG)\n",
+    "logging.getLogger('xsarsea.streaks').setLevel(logging.DEBUG)\n",
+    "\n",
+    "import holoviews as hv\n",
+    "hv.extension('bokeh')\n",
+    "import geoviews as gv\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a23d4113-e828-4844-910f-d95f33d15400",
-   "metadata": {},
+   "id": "fbe38d74",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# open a file a 100m (IW_GRDH pixel size is 10m, so we use resolution=10)\n",
-    "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE')\n",
+    "filename='/home/oarcher/SAFE/S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_992F.SAFE' # irma\n",
+    "#filename = xsar.get_test_file('S1B_IW_GRDH_1SDV_20181013T062322_20181013T062347_013130_018428_Z000.SAFE') # bz\n",
+    "#filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE')\n",
+    "#filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE')\n",
     "sar_ds = xsar.open_dataset(filename,resolution={'atrack':10,'xtrack':10}).isel(atrack=slice(20,None,None),xtrack=slice(20,None,None)) # isel to skip bad image edge\n",
     "\n",
     "# add detrended sigma0\n",
@@ -51,156 +65,267 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6828ce4-2912-4a36-9ca9-54cc0dded693",
+   "id": "8e52d26e",
    "metadata": {},
    "source": [
-    "## Simple gradients analysis\n",
+    "## General overview\n",
     "\n",
-    "Simple gradient analysis is done with [xsarsea.gradients.Gradients](../basic_api.rst#xsarsea.gradients.Gradients)\n",
+    "Gradients direction analysis is done by moving a window over the image. xsarsea allow multiple windows sizes and resolutions.\n",
     "\n",
-    "Here, we merge the gradient analysis with the original dataset. 'grad_dir' and 'grad_weigth' variables will be added.\n",
-    "This is easy, because the default for [xsarsea.gradients.Gradients.main_gradients](../basic_api.rst#xsarsea.gradients.Gradients.main_gradients) is to interpolate gradients on the original grid."
+    "`sar_ds` is a IW_GRDH SAFE with a pixel size of 10m at full resolution. We have opened the SAFE with `resolution={'atrack':10,'xtrack':10}`, so the pixel size is 100m.\n",
+    "\n",
+    "We want to compute gradients with windows size of 16km and 32km, and with an input resolution of 100m and 200m.\n",
+    "As the pixel size is 100m , we will use `windows_sizes=[160,320]` to get 16km and 32km, and  `downscales_factors=[1,2]` to get input resolution of 100m (no downscale), and 200m (downscale by factor 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48c67fad-ee2a-4892-866c-29872e340851",
+   "id": "74e0a5fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sar_ds = xr.merge([sar_ds, xsarsea.gradients.Gradients(sar_ds['sigma0_detrend']).main_gradients()])\n",
-    "sar_ds"
+    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[160,320], downscales_factors=[1,2])\n",
+    "\n",
+    "# get gradients histograms as an xarray dataset\n",
+    "hist = gradients.histogram\n",
+    "\n",
+    "# get orthogonals gradients\n",
+    "hist['angles'] = hist['angles'] + np.pi/2\n",
+    "\n",
+    "#mean\n",
+    "hist_mean = hist.mean(['pol','downscale_factor','window_size'])\n",
+    "\n",
+    "# smooth\n",
+    "hist_mean['quality'] = xsarsea.gradients.circ_smooth(hist_mean['quality'])\n",
+    "\n",
+    "# select histogram peak\n",
+    "iangle = hist_mean['quality'].fillna(0).argmax(dim='angles')\n",
+    "streaks_dir = hist_mean.angles.isel(angles=iangle)\n",
+    "streaks_quality = hist_mean['quality'].isel(angles=iangle)\n",
+    "streaks = xr.merge([dict(angle=streaks_dir,quality=streaks_quality)]).drop('angles')\n",
+    "\n",
+    "\n",
+    "# convert from image convention (rad=0=atrack) to geographic convention (deg=0=north)\n",
+    "# select needed variables in original dataset, and map them to streaks dataset\n",
+    "streaks_geo = sar_ds[['longitude','latitude','ground_heading']].interp(\n",
+    "    atrack=streaks.atrack,\n",
+    "    xtrack=streaks.xtrack, \n",
+    "    method='nearest')\n",
+    "\n",
+    "streaks_geo['quality'] = streaks['quality']\n",
+    "\n",
+    "# convert directions from image convention to geographic convetion\n",
+    "# note that there is no clockwise swapping, because image axes are transposed\n",
+    "streaks_geo['streaks_dir'] =  np.rad2deg(streaks['angle']) + streaks_geo['ground_heading']\n",
+    "\n",
+    "streaks_geo = streaks_geo.compute()\n",
+    "\n",
+    "# plot. Note that hv.VectorField only accept radians, and 0 is West, so we need to reconvert degrees to radians when calling ...\n",
+    "gv.tile_sources.Wikipedia * gv.VectorField(\n",
+    "    (\n",
+    "        streaks_geo['longitude'], \n",
+    "        streaks_geo['latitude'], \n",
+    "        np.pi/2 -np.deg2rad(streaks_geo['streaks_dir']), \n",
+    "        streaks_geo['quality']\n",
+    "    )\n",
+    ").opts(pivot='mid', arrow_heads=False, tools=['hover'], magnitude='Magnitude')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7bb49de9-9bd8-4cce-bbab-021d00f235be",
+   "id": "97c9ff4b",
    "metadata": {},
    "source": [
-    "## Multi scale and multi resolution gradients analysis\n",
+    "> **_WARNING:_**  `hv.VectorField` and `gv.VectorField` don't use degrees north convention, but radian convention, with 0 = East or right\n",
+    "> So, to use them with degrees north, you have to convert them to gradients with \n",
+    "> ```python\n",
+    "> np.pi/2 -np.deg2rad(deg_north)\n",
+    "> ```\n",
+    ">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d76c35e9",
+   "metadata": {},
+   "source": [
+    "## Digging into intermediate computations \n",
     "\n",
-    "[xsarsea.gradients.MultiGradients](../basic_api.rst#xsarsea.gradients.MultiGradients) can be used to compute gradients at differents scale and resolution.\n",
+    "### streaks_geo\n",
     "\n",
-    "Original `sigma0` pixel spacing is 100m. We can use `downscale_factors=[1,2,4]` to downscale it to 100m, 200m, and 400m, and use `windows_sizes=[160, 240, 320]` to use a sliding windows of 16km, 24km and 32km.\n",
+    "`streaks_geo` is a `xarray.Dataset`, with `latitude`, `longitude` and `streaks_dir` (0=deg north) variables.\n",
     "\n",
-    "`window_step=1` refer to the smallest window overlaping, so there will be no overlap for the 16km window, but the overlaping for other windows will be 24-16=8km and 32-16=16km. \n",
-    "\n",
-    "with `interpolate=False`, streaks are not interpolated on the original grid, so they can't be merged into the orginal dataset (check the dimensions sizes)."
+    "It has dims `('atrack', 'xtrack')`, with a spacing corresponding to the first windows size, according to the window step."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a192074-93bb-415b-abc1-7ffe415de0b1",
+   "id": "8db64e59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "streaks = xsarsea.gradients.MultiGradients(sar_ds['sigma0_detrend'],downscale_factors=[1,2,4], windows_sizes=[160, 320, 480], window_step=1)\n",
-    "\n",
-    "streaks_ds = streaks.main_gradients(method='max', interpolate=False)\n",
-    "streaks_ds"
+    "streaks_geo"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "741bad40-b8b3-4403-ac07-655e04a2b819",
+   "id": "5001ec04",
    "metadata": {},
    "source": [
-    "## Digging into MultiGradients\n",
+    "### streaks\n",
     "\n",
-    "[xsarsea.gradients.MultiGradientsViewer](../basic_api.rst#xsarsea.gradients.MultiGradientsViewer) can be used to dig interactively with a `MultiGradient` instance.\n",
-    "\n",
-    "Note that this require a live notebook, and can't be fully used from the html example page.\n",
-    "\n",
-    "This is currently work in progress, more work is needed to provide an understandable figure ..."
+    "`streaks_geo` was computed from `streaks` (also a `xarray.Dataset`). The main difference is that the `angle` variable from `streaks` is in radians, in *image convention* (ie rad=0 is in atrack direction) \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160708e9-9cbc-49b4-a704-a284a1e90760",
+   "id": "f79f3ae4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xsarsea.gradients.MultiGradientsViewer(streaks).all_view"
+    "streaks"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "341bd4e5-674c-4f57-ba5f-af9d7744daf9",
+   "id": "2c42c677",
    "metadata": {},
    "source": [
-    "Many gradients where found. Some are probably aligned with streaks, but others certainly not.\n",
+    "#### Convertion from image convention to geographic convention\n",
     "\n",
-    "For each position, we can compute the direction stdev, and the mean weight."
+    "```python\n",
+    "angle_geo = np.rad2deg(angle_img) + ground_heading\n",
+    "```\n",
+    "\n",
+    "#### Conversion from geographic convention to image convention\n",
+    "```python\n",
+    "angle_img = np.deg2rad(angle_geo - ground_heading)\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d72f3b5a",
+   "metadata": {},
+   "source": [
+    "### hist_mean\n",
+    "\n",
+    "`streaks` variable was computed from `hist_mean`.\n",
+    "\n",
+    "The main difference with `streaks` variable is that we don't have a single angle, but a histogram of probability for binned angles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18bb63df-c6dc-45da-ab85-aebda59207cf",
+   "id": "6bb19085",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "streaks_ds['grad_dir_std'] = xr.zeros_like(streaks_ds['grad_dir']).isel(pol=0,downscale_factor=0,window_size=0)\n",
-    "streaks_ds['grad_dir_std'].values = scipy.stats.circstd(streaks_ds['grad_dir'].values,high=90, low=-90, axis=(0,1,2), nan_policy='omit')\n",
-    "\n",
-    "(\n",
-    "    hv.QuadMesh(streaks_ds['grad_dir_std']).opts(cmap='bmy', title='dir stdev') + \\\n",
-    "    hv.QuadMesh(np.mean(streaks_ds['grad_weight'], axis=(0,1,2))).opts(cmap='viridis', title='mean weight')\n",
-    ").opts(hv.opts.QuadMesh(frame_width=400, frame_height=400, tools=['hover']))\n"
+    "hist_mean"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bfc9a22c-336d-452b-a855-c235af02cddf",
+   "id": "b1dc02d0",
    "metadata": {},
    "source": [
-    "We can try to select the best weight from all computed gradients, and compare them to the one computed at 100m with 16km window size, on crosspol."
+    "Let's exctract one histogram at an arbitrary position, and plot the histogram.\n",
+    "\n",
+    "We can do this with the regular `hv.Histogram` function, or use `xsarsea.gradients.histogram_plot`, that plot the histogram as a circular one."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a4e2262-c349-49af-af60-6151387bf8af",
+   "id": "d504e5fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# best streaks\n",
-    "idx = streaks_ds['grad_weight'].fillna(0).argmax(('pol','downscale_factor', 'window_size'))\n",
-    "best_streaks = streaks_ds.isel(pol=idx['pol'],downscale_factor=idx['downscale_factor'], window_size=idx['window_size'])\n",
-    "best_streaks['grad_dir_rad'] = xr.ufuncs.deg2rad(best_streaks['grad_dir'])\n",
-    "\n",
-    "# streaks at 100m, crosspol\n",
-    "streaks_cross_100 = streaks_ds.sel(pol='VH',downscale_factor=1, window_size=160)\n",
-    "streaks_cross_100['grad_dir_rad'] = xr.ufuncs.deg2rad(streaks_cross_100['grad_dir'])\n",
-    "\n",
-    "\n",
-    "clim = tuple([np.nanpercentile(streaks.sigma0.sel(pol='VH'), l) for l in [5,95]])\n",
-    "\n",
-    "(\n",
-    "    hv.Image(streaks.sigma0.sel(pol='VH')).opts(cmap='gray',clim=clim) * \\\n",
-    "    hv.VectorField(best_streaks, vdims=['grad_dir_rad','grad_weight'], label='corrected').opts(color='r') * \\\n",
-    "    hv.VectorField(streaks_cross_100, vdims=['grad_dir_rad','grad_weight'], label='100m 16km cr').opts(color='y') \n",
-    ").opts(hv.opts.VectorField(arrow_heads=False, pivot='mid', scale=0.4, line_width=3)).opts(frame_width=800, frame_height=800)"
+    "hist_at = hist_mean['quality'].sel(atrack=5000,xtrack=12000,method='nearest')\n",
+    "hv.Histogram( (hist_at.angles, hist_at )) + xsarsea.gradients.histogram_plot(hist_at)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd6df209-71a0-4f7f-8d30-01f4090609ae",
+   "id": "3a0ee5f7",
    "metadata": {},
    "source": [
-    "Above figure show that some correction in the left lower corner are probaly good. But some others are probably worse than the original solution ..\n",
+    "`xsarsea` also provide an interactive drawing class `xsarsea.gradients.PlotGradients` that can be used to draw the circular histogram at mouse tap. (needs a live notebook)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43bfe478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xsarsea.gradients.PlotGradients(hist_mean).iplot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71180ae6",
+   "metadata": {},
+   "source": [
+    "`hist_mean` was smoothed. Let's recompute it without smoothing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbfdb787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xsarsea.gradients.PlotGradients(hist.mean(['pol','downscale_factor','window_size'])).iplot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08174751",
+   "metadata": {},
+   "source": [
+    "### hist\n",
     "\n",
-    "More work is needed !"
+    "`hist_mean` was computed from `hist`, by meaning non spatials dimensions `['pol','downscale_factor','window_size']`.\n",
+    "\n",
+    "That is because gradients where computed on several polarisations and windows sizes, and multiple resolutions:\n",
+    "\n",
+    "```python\n",
+    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[160,320], downscales_factors=[1,2])\n",
+    "hist = gradients.histogram\n",
+    "```\n",
+    "\n",
+    "In fact, `xsarsea.gradients.Gradients` is a wrapper around `xsarsea.gradients.Gradients2D`, that only accept 2D sigma0 (one polarization), and single window_size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60fbd16a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist2D = xsarsea.gradients.Gradients2D(sar_ds['sigma0_detrend'].sel(pol='VH'), window_size=160, window_step=1).histogram\n",
+    "\n",
+    "# get orthogonals gradients\n",
+    "hist2D['angles'] = hist2D['angles'] + np.pi/2\n",
+    "\n",
+    "xsarsea.gradients.PlotGradients(hist2D).iplot()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
