local filename removed

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# open a file a 100m (IW_GRDH pixel size is 10m, so we use resolution=10)\n",
-    "filename='/home/oarcher/SAFE/S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_992F.SAFE' # irma\n",
+    "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE')\n",
     "#filename = xsar.get_test_file('S1B_IW_GRDH_1SDV_20181013T062322_20181013T062347_013130_018428_Z000.SAFE') # bz\n",
     "#filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE')\n",
     "#filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE')\n",
