--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -43,9 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fbe38d74",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# open a file a 100m (IW_GRDH pixel size is 10m, so we use resolution=10)\n",
@@ -70,11 +68,11 @@
    "source": [
     "## General overview\n",
     "\n",
-    "Gradients direction analysis is done by moving a window over the image. xsarsea allow multiple windows sizes and resolutions.\n",
+    "Gradients direction analysis is done by moving a window over the image. [xsarsea.gradients.Gradients](../basic_api.rst#xsarsea.gradients.Gradients) allow multiple windows sizes and resolutions.\n",
     "\n",
     "`sar_ds` is a IW_GRDH SAFE with a pixel size of 10m at full resolution. We have opened the SAFE with `resolution={'atrack':10,'xtrack':10}`, so the pixel size is 100m.\n",
     "\n",
-    "We want to compute gradients with windows size of 16km and 32km, and with an input resolution of 100m and 200m.\n",
+    "We want to compute gradients with windows size of 16km and 32km, and an input resolution of 100m and 200m.\n",
     "As the pixel size is 100m , we will use `windows_sizes=[160,320]` to get 16km and 32km, and  `downscales_factors=[1,2]` to get input resolution of 100m (no downscale), and 200m (downscale by factor 2)"
    ]
   },
@@ -238,7 +236,7 @@
    "source": [
     "Let's exctract one histogram at an arbitrary position, and plot the histogram.\n",
     "\n",
-    "We can do this with the regular `hv.Histogram` function, or use `xsarsea.gradients.histogram_plot`, that plot the histogram as a circular one."
+    "We can do this with the regular `hv.Histogram` function, or use [xsarsea.gradients.histogram_plot](../basic_api.rst#xsarsea.gradients.histogram_plot), that plot the histogram as a circular one."
    ]
   },
   {
@@ -257,7 +255,7 @@
    "id": "3a0ee5f7",
    "metadata": {},
    "source": [
-    "`xsarsea` also provide an interactive drawing class `xsarsea.gradients.PlotGradients` that can be used to draw the circular histogram at mouse tap. (needs a live notebook)"
+    "`xsarsea` also provide an interactive drawing class [xsarsea.gradients.PlotGradients](../basic_api.rst#xsarsea.gradients.PlotGradients) that can be used to draw the circular histogram at mouse tap. (needs a live notebook)"
    ]
   },
   {
@@ -304,7 +302,7 @@
     "hist = gradients.histogram\n",
     "```\n",
     "\n",
-    "In fact, `xsarsea.gradients.Gradients` is a wrapper around `xsarsea.gradients.Gradients2D`, that only accept 2D sigma0 (one polarization), and single window_size\n"
+    "In fact, [xsarsea.gradients.Gradients](../basic_api.rst#xsarsea.gradients.Gradients) is a wrapper around [xsarsea.gradients.Gradients2D](../basic_api.rst#xsarsea.gradients.Gradients2D), that only accept 2D sigma0 (one polarization), and single window_size\n"
    ]
   },
   {
@@ -324,22 +322,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
