replaced PlotGradients.iplot by PlotGradients.linked_plot to allow image overlapping

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -46,16 +46,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# open a file a 100m (IW_GRDH pixel size is 10m, so we use resolution=10)\n",
-    "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE')\n",
+    "# open a file a 100m \n",
+    "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE') # irma\n",
     "#filename = xsar.get_test_file('S1B_IW_GRDH_1SDV_20181013T062322_20181013T062347_013130_018428_Z000.SAFE') # bz\n",
     "#filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE')\n",
-    "#filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE')\n",
-    "sar_ds = xsar.open_dataset(filename,resolution={'atrack':10,'xtrack':10}).isel(atrack=slice(20,None,None),xtrack=slice(20,None,None)) # isel to skip bad image edge\n",
+    "#filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE') # subswath\n",
+    "sar_ds = xsar.open_dataset(filename,resolution='100m').isel(atrack=slice(20,None,None),xtrack=slice(20,None,None)) # isel to skip bad image edge\n",
     "\n",
     "# add detrended sigma0\n",
     "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence)\n",
-    "\n",
     "# apply land mask\n",
     "land_mask = sar_ds['land_mask'].compute()\n",
     "sar_ds['sigma0_detrend'] = xr.where(land_mask, np.nan, sar_ds['sigma0_detrend']).transpose(*sar_ds['sigma0_detrend'].dims).compute()\n"
@@ -95,13 +94,13 @@
     "hist_mean = hist.mean(['pol','downscale_factor','window_size'])\n",
     "\n",
     "# smooth\n",
-    "hist_mean['quality'] = xsarsea.gradients.circ_smooth(hist_mean['quality'])\n",
+    "hist_mean['weight'] = xsarsea.gradients.circ_smooth(hist_mean['weight'])\n",
     "\n",
     "# select histogram peak\n",
-    "iangle = hist_mean['quality'].fillna(0).argmax(dim='angles')\n",
+    "iangle = hist_mean['weight'].fillna(0).argmax(dim='angles')\n",
     "streaks_dir = hist_mean.angles.isel(angles=iangle)\n",
-    "streaks_quality = hist_mean['quality'].isel(angles=iangle)\n",
-    "streaks = xr.merge([dict(angle=streaks_dir,quality=streaks_quality)]).drop('angles')\n",
+    "streaks_weight = hist_mean['weight'].isel(angles=iangle)\n",
+    "streaks = xr.merge([dict(angle=streaks_dir,weight=streaks_weight)]).drop('angles')\n",
     "\n",
     "\n",
     "# convert from image convention (rad=0=atrack) to geographic convention (deg=0=north)\n",
@@ -111,7 +110,7 @@
     "    xtrack=streaks.xtrack, \n",
     "    method='nearest')\n",
     "\n",
-    "streaks_geo['quality'] = streaks['quality']\n",
+    "streaks_geo['weight'] = streaks['weight']\n",
     "\n",
     "# convert directions from image convention to geographic convetion\n",
     "# note that there is no clockwise swapping, because image axes are transposed\n",
@@ -125,7 +124,7 @@
     "        streaks_geo['longitude'], \n",
     "        streaks_geo['latitude'], \n",
     "        np.pi/2 -np.deg2rad(streaks_geo['streaks_dir']), \n",
-    "        streaks_geo['quality']\n",
+    "        streaks_geo['weight']\n",
     "    )\n",
     ").opts(pivot='mid', arrow_heads=False, tools=['hover'], magnitude='Magnitude')\n",
     "\n"
@@ -246,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist_at = hist_mean['quality'].sel(atrack=5000,xtrack=12000,method='nearest')\n",
+    "hist_at = hist_mean['weight'].sel(atrack=5000,xtrack=12000,method='nearest')\n",
     "hv.Histogram( (hist_at.angles, hist_at )) + xsarsea.gradients.histogram_plot(hist_at)"
    ]
   },
@@ -265,7 +264,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xsarsea.gradients.PlotGradients(hist_mean).iplot()"
+    "# background image for vectorfield\n",
+    "s0 = sar_ds['sigma0_detrend'].sel(pol='VH')\n",
+    "hv_img = hv.Image(s0).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95)))\n",
+    "\n",
+    "hv_vf, hv_hist = xsarsea.gradients.PlotGradients(hist_mean).linked_plots()\n",
+    "hv_hist + hv_img * hv_vf"
    ]
   },
   {
@@ -283,7 +287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xsarsea.gradients.PlotGradients(hist.mean(['pol','downscale_factor','window_size'])).iplot()"
+    "hv_vf, hv_hist = xsarsea.gradients.PlotGradients(hist.mean(['pol','downscale_factor','window_size'])).linked_plots()\n",
+    "hv_hist + hv_img * hv_vf"
    ]
   },
   {
@@ -317,7 +322,8 @@
     "# get orthogonals gradients\n",
     "hist2D['angles'] = hist2D['angles'] + np.pi/2\n",
     "\n",
-    "xsarsea.gradients.PlotGradients(hist2D).iplot()"
+    "hv_vf, hv_hist = xsarsea.gradients.PlotGradients(hist2D).linked_plots()\n",
+    "hv_hist + hv_img * hv_vf"
    ]
   }
  ],
