gradient windows sizes are now in axtrack coordinates, not in pixels

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -69,10 +69,9 @@
     "\n",
     "Gradients direction analysis is done by moving a window over the image. [xsarsea.gradients.Gradients](../basic_api.rst#xsarsea.gradients.Gradients) allow multiple windows sizes and resolutions.\n",
     "\n",
-    "`sar_ds` is a IW_GRDH SAFE with a pixel size of 10m at full resolution. We have opened the SAFE with `resolution={'atrack':10,'xtrack':10}`, so the pixel size is 100m.\n",
+    "`sar_ds` is a IW_GRDH SAFE with a pixel size of 10m at full resolution. So to compute compute gradients with windows size of 16km and 32km, we need to use `windows_sizes=[1600,3200]`\n",
     "\n",
-    "We want to compute gradients with windows size of 16km and 32km, and an input resolution of 100m and 200m.\n",
-    "As the pixel size is 100m , we will use `windows_sizes=[160,320]` to get 16km and 32km, and  `downscales_factors=[1,2]` to get input resolution of 100m (no downscale), and 200m (downscale by factor 2)"
+    "`sar_ds` resolution is 100m, so if we want to compute gradients at 100m an 200m, we need to use `downscales_factors=[1,2]`"
    ]
   },
   {
@@ -82,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[160,320], downscales_factors=[1,2])\n",
+    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[1600,3200], downscales_factors=[1,2])\n",
     "\n",
     "# get gradients histograms as an xarray dataset\n",
     "hist = gradients.histogram\n",
@@ -303,7 +302,7 @@
     "That is because gradients where computed on several polarisations and windows sizes, and multiple resolutions:\n",
     "\n",
     "```python\n",
-    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[160,320], downscales_factors=[1,2])\n",
+    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[1600,3200], downscales_factors=[1,2])\n",
     "hist = gradients.histogram\n",
     "```\n",
     "\n",
@@ -317,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist2D = xsarsea.gradients.Gradients2D(sar_ds['sigma0_detrend'].sel(pol='VH'), window_size=160, window_step=1).histogram\n",
+    "hist2D = xsarsea.gradients.Gradients2D(sar_ds['sigma0_detrend'].sel(pol='VH'), window_size=1600, window_step=1).histogram\n",
     "\n",
     "# get orthogonals gradients\n",
     "hist2D['angles'] = hist2D['angles'] + np.pi/2\n",
