--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -263,6 +263,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if defined, 'window_size' is used to draw a box at mouse position\n",
+    "hist_mean['window_size'] = hist['window_size'].mean()\n",
+    "\n",
     "# background image for vectorfield\n",
     "s0 = sar_ds['sigma0_detrend'].sel(pol='VH')\n",
     "hv_img = hv.Image(s0).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95)))\n",
@@ -324,6 +327,62 @@
     "hv_vf, hv_hist = xsarsea.gradients.PlotGradients(hist2D).linked_plots()\n",
     "hv_hist + hv_img * hv_vf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82f13d04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be6586d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_mean.where"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a5d05cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca356be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_mean['window_size'] = hist['window_size'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b848872d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc15d9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
