legend for historgram, and new way to link plots

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -50,7 +50,7 @@
     "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE') # irma\n",
     "#filename = xsar.get_test_file('S1B_IW_GRDH_1SDV_20181013T062322_20181013T062347_013130_018428_Z000.SAFE') # bz\n",
     "#filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE')\n",
-    "#filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE') # subswath\n",
+    "filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE') # subswath\n",
     "sar_ds = xsar.open_dataset(filename,resolution='100m').isel(atrack=slice(20,None,None),xtrack=slice(20,None,None)) # isel to skip bad image edge\n",
     "\n",
     "# add detrended sigma0\n",
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[1600,3200], downscales_factors=[1,2])\n",
+    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'].sel(pol='VV'), windows_sizes=[1600,3200], downscales_factors=[1,2])\n",
     "\n",
     "# get gradients histograms as an xarray dataset\n",
     "hist = gradients.histogram\n",
@@ -90,15 +90,20 @@
     "hist['angles'] = hist['angles'] + np.pi/2\n",
     "\n",
     "#mean\n",
-    "hist_mean = hist.mean(['pol','downscale_factor','window_size'])\n",
+    "hist_mean = hist.mean(['downscale_factor','window_size'])\n",
     "\n",
-    "# smooth\n",
-    "hist_mean['weight'] = xsarsea.gradients.circ_smooth(hist_mean['weight'])\n",
+    "# mean, and smooth\n",
+    "hist_mean_smooth = hist_mean.copy()\n",
+    "hist_mean_smooth['weight'] = xsarsea.gradients.circ_smooth(hist_mean_smooth['weight'])\n",
+    "\n",
+    "# smooth only\n",
+    "hist_smooth = hist.copy()\n",
+    "hist_smooth['weight'] = xsarsea.gradients.circ_smooth(hist_smooth['weight'])\n",
     "\n",
     "# select histogram peak\n",
-    "iangle = hist_mean['weight'].fillna(0).argmax(dim='angles')\n",
-    "streaks_dir = hist_mean.angles.isel(angles=iangle)\n",
-    "streaks_weight = hist_mean['weight'].isel(angles=iangle)\n",
+    "iangle = hist_mean_smooth['weight'].fillna(0).argmax(dim='angles')\n",
+    "streaks_dir = hist_mean_smooth.angles.isel(angles=iangle)\n",
+    "streaks_weight = hist_mean_smooth['weight'].isel(angles=iangle)\n",
     "streaks = xr.merge([dict(angle=streaks_dir,weight=streaks_weight)]).drop('angles')\n",
     "\n",
     "\n",
@@ -212,7 +217,7 @@
    "source": [
     "### hist_mean\n",
     "\n",
-    "`streaks` variable was computed from `hist_mean`.\n",
+    "`streaks` variable was computed from `hist_mean_smooth`.\n",
     "\n",
     "The main difference with `streaks` variable is that we don't have a single angle, but a histogram of probability for binned angles"
    ]
@@ -224,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist_mean"
+    "hist_mean_smooth"
    ]
   },
   {
@@ -234,7 +239,7 @@
    "source": [
     "Let's exctract one histogram at an arbitrary position, and plot the histogram.\n",
     "\n",
-    "We can do this with the regular `hv.Histogram` function, or use [xsarsea.gradients.histogram_plot](../basic_api.rst#xsarsea.gradients.histogram_plot), that plot the histogram as a circular one."
+    "We can do this with the regular `hv.Histogram` function, or use [xsarsea.gradients.circ_hist](../basic_api.rst#xsarsea.gradients.circ_hist), that might be used with `hv.Path` to plot the histogram as a circular one."
    ]
   },
   {
@@ -244,8 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist_at = hist_mean['weight'].sel(atrack=5000,xtrack=12000,method='nearest')\n",
-    "hv.Histogram( (hist_at.angles, hist_at )) + xsarsea.gradients.histogram_plot(hist_at)"
+    "hist_at = hist_mean_smooth['weight'].sel(atrack=5000,xtrack=12000,method='nearest')\n",
+    "hv.Histogram( (hist_at.angles, hist_at )) + hv.Path(xsarsea.gradients.circ_hist(hist_at))"
    ]
   },
   {
@@ -263,14 +268,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if defined, 'window_size' is used to draw a box at mouse position\n",
-    "hist_mean['window_size'] = hist['window_size'].mean()\n",
-    "\n",
     "# background image for vectorfield\n",
-    "s0 = sar_ds['sigma0_detrend'].sel(pol='VH')\n",
+    "s0 = sar_ds['sigma0_detrend'].sel(pol='VV')\n",
     "hv_img = hv.Image(s0).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95)))\n",
     "\n",
-    "hv_vf, hv_hist = xsarsea.gradients.PlotGradients(hist_mean).linked_plots()\n",
+    "\n",
+    "plot_mean_smooth = xsarsea.gradients.PlotGradients(hist_mean_smooth)\n",
+    "\n",
+    "# get vectorfield, with mouse tap activated\n",
+    "hv_vf = plot_mean_smooth.vectorfield(tap=True)\n",
+    "\n",
+    "# connect mouse to histogram\n",
+    "hv_hist = plot_mean_smooth.mouse_histogram()\n",
+    "\n",
+    "# notebook dynamic output\n",
     "hv_hist + hv_img * hv_vf"
    ]
   },
@@ -279,7 +290,28 @@
    "id": "71180ae6",
    "metadata": {},
    "source": [
-    "`hist_mean` was smoothed. Let's recompute it without smoothing"
+    "`hist_mean_smooth` was smoothed. Let's try `hist_smooth`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07398ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_smooth = xsarsea.gradients.PlotGradients(hist_smooth)\n",
+    "hv_vf = plot_smooth.vectorfield(tap=True)\n",
+    "hv_hist = plot_smooth.mouse_histogram()\n",
+    "hv_hist + (hv_img * hv_vf).opts(legend_position='right', frame_width=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ddaa227",
+   "metadata": {},
+   "source": [
+    "Using `source` keyword for `mouse_histogram`, we can link several histrograms"
    ]
   },
   {
@@ -289,97 +321,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv_vf, hv_hist = xsarsea.gradients.PlotGradients(hist.mean(['pol','downscale_factor','window_size'])).linked_plots()\n",
-    "hv_hist + hv_img * hv_vf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08174751",
-   "metadata": {},
-   "source": [
-    "### hist\n",
-    "\n",
-    "`hist_mean` was computed from `hist`, by meaning non spatials dimensions `['pol','downscale_factor','window_size']`.\n",
-    "\n",
-    "That is because gradients where computed on several polarisations and windows sizes, and multiple resolutions:\n",
-    "\n",
-    "```python\n",
-    "gradients = xsarsea.gradients.Gradients(sar_ds['sigma0_detrend'], windows_sizes=[1600,3200], downscales_factors=[1,2])\n",
-    "hist = gradients.histogram\n",
-    "```\n",
-    "\n",
-    "In fact, [xsarsea.gradients.Gradients](../basic_api.rst#xsarsea.gradients.Gradients) is a wrapper around [xsarsea.gradients.Gradients2D](../basic_api.rst#xsarsea.gradients.Gradients2D), that only accept 2D sigma0 (one polarization), and single window_size\n"
+    "plot_raw = xsarsea.gradients.PlotGradients(hist)\n",
+    "hv_vf = plot_raw.vectorfield(tap=True)\n",
+    "hv_hist_raw = plot_raw.mouse_histogram()\n",
+    "hv_hist_smooth = plot_raw.mouse_histogram( source= plot_smooth)  \n",
+    "hv_hist_raw.opts(title='raw') + hv_hist_smooth.opts(title='smoothed') + (hv_img * hv_vf).opts(legend_position='right', frame_width=300)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60fbd16a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist2D = xsarsea.gradients.Gradients2D(sar_ds['sigma0_detrend'].sel(pol='VH'), window_size=1600, window_step=1).histogram\n",
-    "\n",
-    "# get orthogonals gradients\n",
-    "hist2D['angles'] = hist2D['angles'] + np.pi/2\n",
-    "\n",
-    "hv_vf, hv_hist = xsarsea.gradients.PlotGradients(hist2D).linked_plots()\n",
-    "hv_hist + hv_img * hv_vf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82f13d04",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be6586d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist_mean.where"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a5d05cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist2D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ca356be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist_mean['window_size'] = hist['window_size'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b848872d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fc15d9b",
+   "id": "932a89d5",
    "metadata": {},
    "outputs": [],
    "source": []
