rasterize, to make examples lightest

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "import holoviews as hv\n",
     "hv.extension('bokeh')\n",
-    "import geoviews as gv\n"
+    "import geoviews as gv\n",
+    "from holoviews.operation.datashader import rasterize\n"
    ]
   },
   {
@@ -270,7 +271,7 @@
    "source": [
     "# background image for vectorfield\n",
     "s0 = sar_ds['sigma0_detrend'].sel(pol='VV')\n",
-    "hv_img = hv.Image(s0).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95)))\n",
+    "hv_img = rasterize(hv.Image(s0).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95))))\n",
     "\n",
     "\n",
     "plot_mean_smooth = xsarsea.gradients.PlotGradients(hist_mean_smooth)\n",
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ddaa227",
+   "id": "84279455",
    "metadata": {},
    "source": [
     "Using `source` keyword for `mouse_histogram`, we can link several histrograms"
@@ -331,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "932a89d5",
+   "id": "8fa79fc4",
    "metadata": {},
    "outputs": [],
    "source": []
