--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -302,14 +302,14 @@
    "outputs": [],
    "source": [
     "plot_smooth = xsarsea.gradients.PlotGradients(hist_smooth)\n",
-    "hv_vf = plot_smooth.vectorfield(tap=True)\n",
+    "hv_vf = plot_smooth.vectorfield()\n",
     "hv_hist = plot_smooth.mouse_histogram()\n",
     "hv_hist + (hv_img * hv_vf).opts(legend_position='right', frame_width=300)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84279455",
+   "id": "81f7c942",
    "metadata": {},
    "source": [
     "Using `source` keyword for `mouse_histogram`, we can link several histrograms"
@@ -323,16 +323,23 @@
    "outputs": [],
    "source": [
     "plot_raw = xsarsea.gradients.PlotGradients(hist)\n",
-    "hv_vf = plot_raw.vectorfield(tap=True)\n",
-    "hv_hist_raw = plot_raw.mouse_histogram()\n",
-    "hv_hist_smooth = plot_raw.mouse_histogram( source= plot_smooth)  \n",
-    "hv_hist_raw.opts(title='raw') + hv_hist_smooth.opts(title='smoothed') + (hv_img * hv_vf).opts(legend_position='right', frame_width=300)"
+    "plot_mean = xsarsea.gradients.PlotGradients(hist_mean)\n",
+    "hv_vf = plot_smooth.vectorfield()\n",
+    "\n",
+    "gridspace = hv.GridSpace(kdims=['smooth','mean'])\n",
+    "gridspace[(0,0)] = plot_smooth.mouse_histogram(source=plot_raw)\n",
+    "gridspace[(1,0)] = plot_smooth.mouse_histogram() \n",
+    "gridspace[(1,1)] = plot_smooth.mouse_histogram(source=plot_mean_smooth) \n",
+    "gridspace[(0,1)] = plot_smooth.mouse_histogram(source=plot_mean)\n",
+    "\n",
+    "\n",
+    "gridspace + (hv_img * hv_vf).opts(legend_position='right', frame_width=300)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fa79fc4",
+   "id": "829ac83d",
    "metadata": {},
    "outputs": [],
    "source": []
